<!--
  ~ Copyright (c) 2020. Cooiut & Jason
  ~ All right reserved.
  ~ This code is for UCI I&CS 45J project use only,
  ~ Please do not copy or duplicate.
  -->

<resources>
    <string name="app_name">Daily-Bill</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="cost">Unit Cost</string>
    <string name="description">Description</string>
    <string name="close_app">Close App</string>
    <string name="show_bill_history">Show Bill History</string>
    <string name="add_new_income">Add New Income</string>
    <string name="add_new_spend">Add New Spend</string>
    <string name="spend">Spend</string>
    <string name="income">Income</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="totalSpend">Total Spend: </string>
    <string name="totalIncome">Total Income: </string>
    <string name="balance">"Overall Balance: "</string>

    <string-array name="spending">
        <item>Food</item>
        <item>Transportation</item>
        <item>Housing</item>
        <item>Utilities</item>
        <item>Insurance</item>
        <item>Medical &amp; Healthcare</item>
        <item>Saving, Investing, &amp; Debt Payments</item>
        <item>Personal Spending</item>
        <item>Recreation &amp; Entertainment</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="income">
        <item>Salary</item>
        <item>Investment</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="sequence">
        <item>Sort by…</item>
        <item>Date</item>
        <item>Amount</item>
        <item>Name</item>
    </string-array>

    <string-array name="sequence_sort">
        <item>Decrease Order</item>
        <item>Increase Order</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="test_account_login">"Test account login"</string>
    <string name="exit">"Exit</string>
    <string name="bill_history">Bill History</string>
    <string name="new_income">New Income</string>
    <string name="new_spend">New Spend</string>
    <string name="monthly_analysis">Monthly Analysis</string>
    <string name="select_month">Select Month</string>
    <string name="done">Done</string>
</resources>
