<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Cooiut & Jason
  ~ All right reserved.
  ~ This code is for UCI I&CS 45J project use only,
  ~ Please do not copy or duplicate.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Income">

    <EditText
        android:id="@+id/editTextCost1"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/cost"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerCategory1"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity1" />

    <EditText
        android:id="@+id/editTextName1"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCategory1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSpend" />

    <Spinner
        android:id="@+id/spinnerCategory1"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:entries="@array/spending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName1" />

    <EditText
        android:id="@+id/editTextQuantity1"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextName1"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSpend" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCost1" />

    <EditText
        android:id="@+id/editTextDescription1"
        android:layout_width="369dp"
        android:layout_height="178dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker1" />

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/floatingActionButton1"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="39dp"-->
    <!--        android:layout_marginTop="106dp"-->
    <!--        android:layout_marginEnd="36dp"-->
    <!--        android:clickable="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/datePicker1"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextCost1"-->
    <!--        app:srcCompat="@android:drawable/ic_menu_add"-->
    <!--        android:focusable="true" />-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSpend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>